--- a/deploy-dev/system-config.yaml
+++ b/deploy-dev/system-config.yaml
@@ -1,4 +1,5 @@
 main_dns_domain:  dev.shareableasset.com
+gcp_login_dns: shareableasset.com
 aws_default_region: ap-southeast-1
 aws_vpc_name: interopera
 aws_bucket_alb_id: "114774131450"
