--- a/deploy-dev/ecs-config.yaml
+++ b/deploy-dev/ecs-config.yaml
@@ -22,3 +22,11 @@ jenkins-worker:
   image:
     default: 868968213119.dkr.ecr.ap-southeast-1.amazonaws.com/jenkin-agent:main
   replicas: 1
+
+chain:
+  image:
+    default: 868968213119.dkr.ecr.ap-southeast-1.amazonaws.com/gaia:main
+    init-node: 868968213119.dkr.ecr.ap-southeast-1.amazonaws.com/chain-init-node:main
+  cpu: 512
+  memory: 1024
+  replicas: 0
