--- a/deploy-dev/ecs-config.yaml
+++ b/deploy-dev/ecs-config.yaml
@@ -30,3 +30,9 @@ chain:
   cpu: 512
   memory: 1024
   replicas: 0
+
+bootstrap-chain-validator:
+  image:
+    default: 868968213119.dkr.ecr.ap-southeast-1.amazonaws.com/gaia:main
+  replicas: 0
+  network: bridge
